@@ -173,6 +173,15 @@
   <data name="playToolStripButton.Text" xml:space="preserve">
     <value>Play/Pause</value>
   </data>
+  <data name="repeatToolStripButton.ImageTransparentColor" type="System.Drawing.Color, System.Drawing">
+    <value>Magenta</value>
+  </data>
+  <data name="repeatToolStripButton.Size" type="System.Drawing.Size, System.Drawing">
+    <value>23, 22</value>
+  </data>
+  <data name="repeatToolStripButton.Text" xml:space="preserve">
+    <value>Repeat</value>
+  </data>
   <data name="toolStripSeparator2.Size" type="System.Drawing.Size, System.Drawing">
     <value>6, 25</value>
   </data>
@@ -231,7 +240,7 @@
     <value>0, 24</value>
   </data>
   <data name="sequenceToolString.Size" type="System.Drawing.Size, System.Drawing">
-    <value>748, 25</value>
+    <value>767, 25</value>
   </data>
   <assembly alias="mscorlib" name="mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="sequenceToolString.TabIndex" type="System.Int32, mscorlib">
@@ -466,7 +475,7 @@
     <value>0, 0</value>
   </data>
   <data name="mainMenuStrip.Size" type="System.Drawing.Size, System.Drawing">
-    <value>748, 24</value>
+    <value>767, 24</value>
   </data>
   <data name="mainMenuStrip.TabIndex" type="System.Int32, mscorlib">
     <value>3</value>
@@ -523,7 +532,7 @@
     <value>0, 49</value>
   </data>
   <data name="fieldControl.Size" type="System.Drawing.Size, System.Drawing">
-    <value>748, 504</value>
+    <value>767, 504</value>
   </data>
   <data name="fieldControl.TabIndex" type="System.Int32, mscorlib">
     <value>1</value>
@@ -547,7 +556,7 @@
     <value>6, 13</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>748, 553</value>
+    <value>767, 553</value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -940,6 +949,12 @@
   </data>
   <data name="&gt;&gt;playSequenceTimer.Type" xml:space="preserve">
     <value>System.Windows.Forms.Timer, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;repeatToolStripButton.Name" xml:space="preserve">
+    <value>repeatToolStripButton</value>
+  </data>
+  <data name="&gt;&gt;repeatToolStripButton.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripButton, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>MainForm</value>
